@@ -37,6 +37,7 @@ public class XmlPathConfig {
     private final XmlParserType defaultParserType;
     private final String charset;
     private final Map<String, Boolean> features;
+    private final Map<String, String> declaredNamespaces;
 
 
     /**
@@ -46,14 +47,14 @@ public class XmlPathConfig {
      */
     public XmlPathConfig(XmlPathConfig config) {
         this(config.jaxbObjectMapperFactory(), config.defaultParserType(), config.defaultDeserializer(), config.charset(),
-                new HashMap<String, Boolean>());
+                new HashMap<String, Boolean>(), new HashMap<String, String>());
     }
 
     /**
      * Creates a new XmlPathConfig that is configured to use the default JAXBObjectMapperFactory.
      */
     public XmlPathConfig() {
-        this(new DefaultJAXBObjectMapperFactory(), null, null, defaultCharset(), new HashMap<String, Boolean>());
+        this(new DefaultJAXBObjectMapperFactory(), null, null, defaultCharset(), new HashMap<String, Boolean>(), new HashMap<String, String>());
     }
 
 
@@ -61,12 +62,13 @@ public class XmlPathConfig {
      * Create a new XmlPathConfig that uses the <code>defaultCharset</code> when deserializing XML data.
      */
     public XmlPathConfig(String defaultCharset) {
-        this(new DefaultJAXBObjectMapperFactory(), null, null, defaultCharset, new HashMap<String, Boolean>());
+        this(new DefaultJAXBObjectMapperFactory(), null, null, defaultCharset, new HashMap<String, Boolean>(), new HashMap<String, String>());
 
     }
 
     private XmlPathConfig(JAXBObjectMapperFactory jaxbObjectMapperFactory, XmlParserType defaultParserType,
-                          XmlPathObjectDeserializer defaultDeserializer, String charset, Map<String, Boolean> features) {
+                          XmlPathObjectDeserializer defaultDeserializer, String charset, Map<String, Boolean> features,
+                          Map<String, String> declaredNamespaces) {
         charset = StringUtils.trimToNull(charset);
         if (charset == null) throw new IllegalArgumentException("Charset cannot be empty");
         this.charset = charset;
@@ -74,6 +76,7 @@ public class XmlPathConfig {
         this.defaultParserType = defaultParserType;
         this.jaxbObjectMapperFactory = jaxbObjectMapperFactory;
         this.features = features;
+        this.declaredNamespaces = declaredNamespaces;
     }
 
     private static String defaultCharset() {
@@ -97,7 +100,7 @@ public class XmlPathConfig {
      */
     public XmlPathConfig features(Map<String, Boolean> features) {
         Validate.notNull(features, "Features cannot be null");
-        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, features);
+        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, features, declaredNamespaces);
     }
 
     /**
@@ -112,7 +115,7 @@ public class XmlPathConfig {
         Validate.notEmpty(uri, "URI cannot be empty");
         Map<String, Boolean> newFeatures = new HashMap<String, Boolean>(features);
         newFeatures.put(uri, enabled);
-        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, newFeatures);
+        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, newFeatures, declaredNamespaces);
     }
 
     /**
@@ -130,7 +133,7 @@ public class XmlPathConfig {
     public XmlPathConfig disableLoadingOfExternalDtd() {
         Map<String, Boolean> newFeatures = new HashMap<String, Boolean>(features);
         newFeatures.put("http://apache.org/xml/features/nonvalidating/load-external-dtd", false);
-        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, newFeatures);
+        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, newFeatures, declaredNamespaces);
     }
 
     /**
@@ -144,7 +147,7 @@ public class XmlPathConfig {
      * @return A new XmlPathConfig instance with that assumes the supplied charset when parsing XML documents.
      */
     public XmlPathConfig charset(String charset) {
-        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, features);
+        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, features, declaredNamespaces);
     }
 
     public XmlParserType defaultParserType() {
@@ -173,7 +176,7 @@ public class XmlPathConfig {
      * @param defaultParserType The default parser type to use. If <code>null</code> then classpath scanning will be used.
      */
     public XmlPathConfig defaultParserType(XmlParserType defaultParserType) {
-        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, features);
+        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, features, declaredNamespaces);
     }
 
     /**
@@ -182,11 +185,46 @@ public class XmlPathConfig {
      * @param defaultObjectDeserializer The object de-serializer to use. If <code>null</code> then classpath scanning will be used.
      */
     public XmlPathConfig defaultObjectDeserializer(XmlPathObjectDeserializer defaultObjectDeserializer) {
-        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultObjectDeserializer, charset, features);
+        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultObjectDeserializer, charset, features, declaredNamespaces);
     }
 
     public JAXBObjectMapperFactory jaxbObjectMapperFactory() {
         return jaxbObjectMapperFactory;
+    }
+
+    /**
+     * @return A map containing namespaces that will be used by the underlying {@link groovy.util.XmlSlurper}.
+     * @see org.xml.sax.XMLReader#setFeature(java.lang.String, boolean)
+     */
+    public Map<String, String> declaredNamespaces() {
+        return new HashMap<String, String>(declaredNamespaces);
+    }
+
+    /**
+     * Specify declared namespaces that will be used when parsing XML.
+     *
+     * @param namespacesToDeclare A map containing features that will be used by the underlying {@link groovy.util.XmlSlurper}.
+     * @return A new instance of XmlPathConfig
+     * @see org.xml.sax.XMLReader#setFeature(java.lang.String, boolean)
+     */
+    public XmlPathConfig declareNamespaces(Map<String, String> namespacesToDeclare) {
+        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, features, namespacesToDeclare);
+    }
+
+    /**
+     * Declares a namespace.
+     *
+     * @param prefix       The feature name, which is a fully-qualified URI.
+     * @param namespaceURI The requested value of the feature (true or false).
+     * @return A new XmlPathConfig instance
+     * @see org.xml.sax.XMLReader#setFeature(java.lang.String, boolean)
+     */
+    public XmlPathConfig declaredNamespace(String prefix, String namespaceURI) {
+        Validate.notEmpty(prefix, "Prefix cannot be empty");
+        Validate.notEmpty(namespaceURI, "Namespace URI cannot be empty");
+        Map<String, String> updatedNamespaces = new HashMap<String, String>(declaredNamespaces);
+        updatedNamespaces.put(prefix, namespaceURI);
+        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, features, updatedNamespaces);
     }
 
     /**
@@ -195,7 +233,11 @@ public class XmlPathConfig {
      * @param jaxbObjectMapperFactory The object mapper factory
      */
     public XmlPathConfig jaxbObjectMapperFactory(JAXBObjectMapperFactory jaxbObjectMapperFactory) {
-        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, features);
+        return new XmlPathConfig(jaxbObjectMapperFactory, defaultParserType, defaultDeserializer, charset, features, declaredNamespaces);
+    }
+
+    public boolean hasDeclaredNamespaces() {
+        return !declaredNamespaces.isEmpty();
     }
 
     /**
